# WikiService

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  config.json  config.json.example  docker-compose.yml
.github/workflows/: docker-build.yml  docker-publish.yml
builtin/minecraft/recipe_type/: blasting.json  campfire_cooking.json  crafting_shaped.json  smelting.json  smithing_transform.json  smoking.json  stonecutting.json
modules/: Deps.cmake  GitVersionDetect.cmake  ReadSchema.cmake  deps.cmake
sql/: 20241115210200_up.sql  20241116210100_search.sql  20250126210200_users.sql  20250131211200_game_content.sql  20250525211200_system_info.sql  20250609211200_deployments.sql  20250612211200_project_issue.sql  20250621211200_reports.sql  20250723211200_keys.sql  20251129211200_virtual_projects.sql  20251221211200_project_members.sql  20260222211200_project_visibility.sql  up.sql
sql/provided/: 20250625211200_game_builtins.sql
src/: CMakeLists.txt  config.cc  config.h  cors.cc  cors.h  global.h  main.cc  monitor.cc  monitor.h  monitoring.cc  monitoring.h  version.h
src/api/v1/: CMakeLists.txt  RedisCache.h  auth.cc  auth.h  base.cc  base.h  browse.cc  browse.h  controller.cc  controller.h  docs.cc  docs.h  error.cc  error.h  game.cc  game.h  moderation.cc  moderation.h  projects.cc  projects.h  system.cc  system.h  websocket.cc  websocket.h
src/api/v1/authors/: projects.cc  projects.h  websocket.cc  websocket.h
src/api/v1/projects/: docs.cc  docs.h  game.cc  game.h
src/filters/: AdminFilter.cc  AdminFilter.h  AuthFilter.cc  AuthFilter.h  PublicFilter.cc  PublicFilter.h
src/log/: CMakeLists.txt  log.cc  log.h
src/models/: AccessKey.cc  AccessKey.h  DataImport.cc  DataImport.h  Deployment.cc  Deployment.h  Item.cc  Item.h  ItemId.cc  ItemId.h  Mod.cc  Mod.h  Project.cc  Project.h  ProjectIssue.cc  ProjectIssue.h  ProjectItem.cc  ProjectItem.h  ProjectVersion.cc  ProjectVersion.h  Recipe.cc  Recipe.h  RecipeIngredientItem.cc  RecipeIngredientItem.h  RecipeIngredientTag.cc  RecipeIngredientTag.h  RecipeType.cc  RecipeType.h  RecipeWorkbench.cc  RecipeWorkbench.h  Report.cc  Report.h  Tag.cc  Tag.h  User.cc  User.h  UserProject.cc  UserProject.h  model.json
src/schemas/: CMakeLists.txt  schemas.cc  schemas.h
src/schemas/definition/: config.schema.json  game-data.schema.json  game-recipe-custom.schema.json  game-recipe-type.schema.json  game-recipe.schema.json  game-tag.schema.json  sinytra-wiki.schema.json
src/service/: CMakeLists.txt  access_keys.cc  auth.cc  auth.h  cache.cc  cache.h  cloudflare.cc  cloudflare.h  crypto.cc  crypto.h  database.cc  database.h  database_base.h  database_content.cc  database_system.cc  deployment.cc  deployment.h  documentation.cc  documentation.h  error.h  github.cc  github.h  platforms.cc  platforms.h  project_issue.cc  project_issue.h  reports.h  resolved.cc  resolved.h  resolved_db.cc  resolved_db.h  schemas.cc  schemas.h  serializers.h  service.h  service_impl.cc  service_impl.h  storage.cc  storage.h  users.cc  (+3 more)
src/service/content/: builtin_recipe_type.h.in  game_content.cc  game_content.h  game_data.cc  game_recipes.cc  game_recipes.h  ingestor.cc  ingestor.h  ingestor_content_paths.cc  ingestor_metadata.cc  ingestor_recipes.cc  ingestor_recipes.h  ingestor_tags.cc  recipe_builtin.cc  recipe_builtin.h  recipe_custom.cc  recipe_custom.h  recipe_parser.cc  recipe_parser.h  recipe_resolver.cc  recipe_resolver.h
src/service/content/ingestor/: ingestor.cc  ingestor.h  ingestor_content_paths.cc  ingestor_metadata.cc  ingestor_recipes.cc  ingestor_tags.cc
src/service/content/recipe/: recipe_builtin.cc  recipe_builtin.h  recipe_custom.cc  recipe_custom.h  recipe_parser.cc  recipe_parser.h  recipe_resolver.cc  recipe_resolver.h
src/service/database/: database.cc  database.h  database_base.h  database_content.cc  database_deployments.cc  database_issues.cc  database_reports.cc  database_system.cc  project_database.cc  project_database.h  resolved_db.cc  resolved_db.h
src/service/lang/: crowdin.cc  crowdin.h  lang.cc  lang.h
src/service/project/: cached.cc  cached.h  content.cc  format.cc  format.h  frontmatter.cc  git_hosts.cc  git_hosts.h  pages.cc  project.cc  project.h  properties.cc  properties.h  recipe_resolver.cc  recipe_resolver.h  reports.cc  reports.h  resolved.cc  resolved.h
src/service/project/cached/: cached.cc  cached.h
src/service/project/virtual/: format.cc  format.h  virtual.cc  virtual.h
src/service/schemas/: config.schema.json  game-recipe-base.schema.json  game-recipe-type.schema.json  game-recipe.schema.json  game-tag.schema.json  properties.schema.json  sinytra-wiki.schema.json  workbenches.schema.json
src/service/storage/: deployment.cc  deployment.h  gitclone.cc  gitops.cc  gitops.h  issues.cc  issues.h  realtime.cc  realtime.h  storage.cc  storage.h
src/service/storage/ingestor/: ingestor.cc  ingestor.h  ingestor_content_paths.cc  ingestor_metadata.cc  ingestor_metadata.h  ingestor_recipes.cc  ingestor_tags.cc
src/service/storage/ingestor/recipe/: game_recipes.h  recipe_builtin.cc  recipe_builtin.h  recipe_custom.h  recipe_parser.cc  recipe_parser.h
src/service/storage/issues/: issue_callback.cc  issue_callback.h  issue_service.cc  issue_service.h  issues.cc  issues.h
src/service/storage/management/: project_access.cc  project_access.h  project_management.cc  project_management.h
src/service/system/: access_keys.cc  access_keys.h  data_import.cc  game_data.cc  game_data.h  lang.cc  lang.h  startup.cc  startup.h
src/service/system_data/: system_data_import.cc  system_data_import.h
src/service/util/: crypto.h
src/test/: CMakeLists.txt
test/: CMakeLists.txt
